--- a/styles.css
+++ b/styles.css
@@ -1,119 +1,131 @@
 html,
 body {
-    background-color: #eee;
-    font-family: "Helvetica", "Arial", "Verdana", sans-serif;
-    margin: 0;
-    padding: 0;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  background-color: #eee;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 #app {
-    max-width: 100%;
-    overflow: hidden;
+  height: 100vh;
+  max-width: 100%;
+  overflow: hidden;
 }
 
-.header {
-    background-color: #369;
-    padding: 10px 0;
+#app > div {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
-.header > h1 {
-    color: #fff;
-    font-size: 24px;
-    font-weight: 400;
-    margin: 0;
-    text-align: center;
+
+input {
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 16px;
+  height: 32px;
+  text-indent: 8px;
+  text-transform: uppercase;
+  width: calc(100% - 5px);
+}
+
+.letterbox {
+  padding: 10px;
 }
 
 .letterbox > input {
-    border: 0;
-    font-size: 20px;
-    height: 40px;
-    letter-spacing: 2px;
-    line-height: 40px;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    text-transform: uppercase;
-    width: 100%;
-}
-.letterbox > input:focus {
-    outline: 0;
+  font-size: 20px;
+  height: 40px;
+  letter-spacing: 3px;
+  line-height: 40px;
+  text-align: center;
 }
 
 .controls {
-    align-items: center;
-    background-color: #eee;
-    display: flex;
-    max-width: 100%;
+  align-items: center;
+  background-color: #eee;
+  border-top: 2px solid #fff;
+  display: flex;
+  max-width: 100%;
 }
+
 .controls > div {
-    padding: 10px;
+  padding: 10px;
 }
+
 .controls > div:last-child {
-    border-left: 1px solid #fff;
-    flex-grow: 1;
+  border-left: 2px solid #fff;
+  flex-grow: 1;
 }
+
 .controls > div > label {
-    color: #666;
-    display: block;
-    font-size: 14px;
-    text-align: right;
+  color: #666;
+  display: block;
+  font-size: 14px;
+  text-align: right;
 }
+
 .controls > div > small {
-    color: #999;
-    display: block;
-    font-size: 11px;
-}
-.controls > div > input {
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    color: #f15555;
-    font-size: 16px;
-    height: 32px;
-    letter-spacing: 0;
-    text-indent: 8px;
-    text-transform: uppercase;
-    width: calc(100% - 5px);
+  color: #999;
+  display: block;
+  font-size: 11px;
 }
 
 .boardbox {
-    align-items: center;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    min-height: calc(100vh - 250px);
-    padding: 10px 0;
+  align-items: center;
+  background-color: #fff;
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  padding: 10px 0;
 }
+
 .boardbox > .board > .row > .cell {
-    border-radius: 3px;
-    border: 1px solid #000;
-    display: inline-block;
-    font-size: 24px;
-    font-weight: bold;
-    height: 40px;
-    line-height: 40px;
-    margin: 3px;
-    text-align: center;
-    text-transform: uppercase;
-    vertical-align: text-top;
-    width: 40px;
+  border-radius: 3px;
+  border: 1px solid #000;
+  display: inline-block;
+  font-size: 24px;
+  font-weight: bold;
+  height: 40px;
+  line-height: 40px;
+  margin: 3px;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: text-top;
+  width: 40px;
 }
+
 .boardbox > .board > .row > .cell.empty {
-    border-radius: 0;
-    border-color: #ddd;
+  border-radius: 0;
+  border-color: #ddd;
 }
 
 .tray {
-    color: #999;
-    font-size: 24px;
-    letter-spacing: 5px;
-    padding-top: 10px;
-    text-align: center;
-    text-transform: uppercase;
+  color: #999;
+  font-size: 24px;
+  letter-spacing: 5px;
+  padding-top: 10px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .message {
-    color: #999;
-    font-size: 14px;
-    padding: 10px 0;
-    text-align: center;
+  color: #999;
+  font-size: 14px;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.show-big-message .boardbox,
+.show-big-message .tray {
+  display: none;
+}
+
+.show-big-message .message {
+  background-color: #fff;
+  flex-grow: 1;
+  font-size: 40px;
+  padding-top: 2ch;
 }
